working on new track database